tests/neg/semantic_warn_implicit_narrowing_decl.baa
// FLAGS: -Wall -Werror
// EXPECT: [Error]
// EXPECT: [-Wimplicit-narrowing]
// EXPECT: تحويل ضمني قد يسبب فقدان بيانات
صحيح الرئيسية() {
    ص٨ صغير = ٣٠٠.
    إرجع صغير.
}
